--- a/index.css
+++ b/index.css
@@ -91,7 +91,7 @@ nav{
 .navbar h1{
     width: 60%;
     height: 48px;
-    background-image: url(/圖片素材/logo_w@2x.png);
+    background-image: url(圖片素材/logo_w@2x.png);
     background-repeat: no-repeat;
     display: block;
     text-indent: 101%;
@@ -153,7 +153,7 @@ nav{
 .banner{
     max-width: 100%;
     height: 840px;
-    background-image: url(/圖片素材/header_desktop@2x.png);
+    background-image: url(圖片素材/header_desktop@2x.png);
     background-position: center;
     background-repeat: no-repeat;
     color: white;
